--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a60e3">  <td>17/08/16 19:05:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppiumTest.afterMethod()[pri:0, instance:build.com.AppiumTest@47c62251]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>17/08/16 19:03:45</td>   <td>-121156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppiumTest.androidTest()[pri:0, instance:build.com.AppiumTest@47c62251]">androidTest</td> 
-  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>17/08/16 19:02:10</td>   <td>-215711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppiumTest.beforeMethod()[pri:0, instance:build.com.AppiumTest@47c62251]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>17/08/26 19:33:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.performTest()[pri:0, instance:com.build.checkout.CheckoutTest@4dfa3a9d]">performTest</td> 
+  <td>main@827966648</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>17/08/26 19:33:38</td>   <td>-6039</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.build.checkout.CheckoutTest@4dfa3a9d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@827966648</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>17/08/26 19:33:50</td>   <td>5664</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.build.checkout.CheckoutTest@4dfa3a9d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@827966648</td>   <td></td> </tr>
 </table>
